Use fixed to make header always visible at the top

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -74,9 +74,9 @@ input, textarea, select, button {
 }
 
 .header {
-  position: sticky;
-  top: 0;
-  
+  position: fixed;
+  left: 0;
+  right: 0;
   min-height: 48px;
   padding: 24px 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -107,7 +107,7 @@ input, textarea, select, button {
 .main {
   flex: 1 0 auto;
   background-color: #f5f6f7;
-  padding: 40px 240px 40px 160px;
+  padding: 130px 240px 40px 160px;
 }
 
 .footer {
